nixrs-derive-tests/tests/ui/deserialize_from_str_missing.stderr
error[E0277]: the trait bound `Test: FromStr` is not satisfied
 --> tests/ui/deserialize_from_str_missing.rs
  |
  | #[nix(from_str)]
  |       ^^^^^^^^ the trait `FromStr` is not implemented for `Test`
  |
  = help: the following other types implement trait `FromStr`:
            CString
            ContentAddress
            ContentAddressMethodAlgorithm
            IpAddr
            Ipv4Addr
            Ipv6Addr
            NarHash
            NonZero<i128>
          and $N others
