nixrs-derive-tests/tests/ui/deserialize_from_str_missing.rs
use nixrs_derive::NixDeserialize;

#[derive(NixDeserialize)]
#[nix(from_str)]
pub struct Test;

fn main() {}
